Add pause controls to urge countdown
